0.1.22

0.1.21

2015-12-11  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed base64 padding bug (reported by Wojtek Kunda)
	* fixed missing end quote in body separator (reported by Wojtek Kunda)
	* added multi-body support to command line application

0.1.20

2015-10-08  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed some allocation code (reported by Carlos Tangerino)

2015-05-09  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed configure.ac for MinGW static+shared build

0.1.19

2015-04-29  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed curl error "VRFY command is disabled" (Andreas Baumann)

0.1.18

2014-04-07  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed additional line break after Date header
	
0.1.17

2013-11-10  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed Date header to show local time with proper UTC offset

2013-11-05  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fixed line breaks in source files (UNIX EOL)
	* show only the version of libcurl instead of all its components

0.1.16

2013-10-21  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* added code to catch failing malloc/realloc when out of memory

0.1.15

2013-05-28  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* API change: added mimetype parameter to the following functions
			quickmail_list_attachment_callback_fn
			quickmail_add_attachment_file
			quickmail_add_attachment_memory
			quickmail_add_attachment_custom

2013-05-10  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* fix automake to add -DNOCURL when compiling quickmaillight
	* fix autoconf to allow compiling with per-target flags

0.1.14

2013-05-03  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* added header line for body: Content-Disposition: inline

2013-04-16  Brecht Sanders  <brechtsanders@users.sourceforge.net>

	* use angle brackets with CURLOPT_MAIL_FROM/CURLOPT_MAIL_RCPT
